<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/prolog_background_color">

        <androidx.cardview.widget.CardView
            android:id="@+id/bannerCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginEnd="@dimen/size_16"
            app:cardCornerRadius="@dimen/size_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/bannerViewPager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_127" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dotsTabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/bannerCardView"
            app:layout_constraintStart_toStartOf="@+id/bannerCardView"
            app:layout_constraintTop_toBottomOf="@+id/bannerCardView"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/size_25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/size_25" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recentBooksTextView"
            style="@style/style_subtitle_18_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:text="@string/recent_books"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/dotsTabLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/expandYourKnowledgeByReadingTextView"
            style="@style/style_description_14_regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_5"
            android:text="@string/expand_your_knowledge_by_reading"
            app:layout_constraintEnd_toStartOf="@+id/seeAllButton"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/recentBooksTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seeAllButton"
            style="@style/style_transparent_button_with_stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/prolog_background_color"
            android:paddingStart="@dimen/size_20"
            android:paddingEnd="@dimen/size_20"
            android:text="@string/see_all"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintTop_toTopOf="@+id/recentBooksTextView"
            app:strokeWidth="@dimen/size_1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/booksRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_14"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/expandYourKnowledgeByReadingTextView"
            tools:listitem="@layout/item_book" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activitiesTextView"
            style="@style/style_subtitle_18_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30"
            android:text="@string/activities"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/booksRecyclerView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/blackboardImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activitiesTextView"
            app:srcCompat="@drawable/ic_blackboard" />

        <TextView
            style="@style/style_description_14_regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/soon_you_will_be_able_to_visualise_courses_for_you"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/blackboardImageView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/size_40"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
