<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_35" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/style_subtitle_18_bold"
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:text="@string/weighted_total"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/style_description_15_regular"
        android:id="@+id/downloadTheContentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/download_the_content_of_your_interest"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/weightedTotalScoreCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        app:cardCornerRadius="@dimen/size_17"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/downloadTheContentTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTextView"
                style="@style/style_title_secondary_15_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/downloadCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginStart="@dimen/size_10" />

            <androidx.cardview.widget.CardView
                android:id="@+id/downloadCardView"
                android:layout_width="@dimen/size_31"
                android:layout_height="@dimen/size_31"
                android:layout_marginEnd="@dimen/size_20"
                android:shape="ring"
                app:cardCornerRadius="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tint="@color/prolog_secondary_color"
                    app:srcCompat="@drawable/ic_download_header" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/qualificationCriteriaCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:layout_marginBottom="@dimen/size_25"
        app:cardCornerRadius="@dimen/size_17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/weightedTotalScoreCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/qualificationCriteriaTextView"
                style="@style/style_title_secondary_15_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:text="@string/qualification_criteria"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/downloadQualificationCriteriaCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginStart="@dimen/size_10" />

            <androidx.cardview.widget.CardView
                android:id="@+id/downloadQualificationCriteriaCardView"
                android:layout_width="@dimen/size_31"
                android:layout_height="@dimen/size_31"
                android:layout_marginEnd="@dimen/size_20"
                android:shape="ring"
                app:cardCornerRadius="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tint="@color/prolog_secondary_color"
                    app:srcCompat="@drawable/ic_download_header" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>